# biology-simulations

./: .pre-commit-config.yaml  environment.yaml  pyproject.toml  requirements.txt
scripts/: export_conda_env.sh
src/biology_simulations/: app.py
src/biology_simulations/epidemiology/: simulation.ipynb  simulation.py
src/biology_simulations/neuroscience/: simulation.ipynb
src/biosimpy/: exceptions.py  graph.py
src/biosimpy/epidemiology/: simulation.py
