[tool.poetry]
name = "biology-simulations"
version = "0.0.0"
description = "Biology computer simulations."
authors = ["Josh Bercich <joshbercich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.13.0"
numpy = "^2.2.6"
pandas = "^2.2.3"
streamlit = "^1.45.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.poetry.scripts]
run-dash-app = "biology_simulations.app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src"]
line-length = 89
indent-width = 4
target-version = "py313"

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
skip-magic-trailing-comma = true
